# 2.hse-mlops-project

./: .gitignore  .pre-commit-config.yaml  README.md  infer.py  pyproject.toml  requirements.txt  train.py  utils.py
.dvc/: config
config/: config.yaml
